<resources>
    <string name="app_name">MAD_Project</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="logo_part1">QUICK</string>
    <string name="logo_part2">chef</string>
    <string name="register_button_text">REGISTER AS SUPPLIER</string>
    <string name="login_button_text">LOGIN</string>


    <string name="register_page_logo_part1">REGISTER AS SUPPLIER</string>
    <string name="register_page_logo_part2">CREATE NEW ACCOUNT</string>


    <string name="form_register_full_name">Full Name</string>
    <string name="form_register_address">Address</string>
    <string name="form_register_email">Email</string>
    <string name="form_register_password">Password</string>
    <string name="form_register_re_enter_password">Re-enter the password</string>
    <string name="form_register_button">REGISTER</string>


    <string name="logo_supplier_page">SUPPLIER PAGE</string>
    <string name="image_pizza">Image pizza</string>
    <string name="name_pizza">PIZZA</string>


    <string name="add_food_item_form_logo_part_1">ADD NEW FOOD ITEM</string>
    <string name="add_food_form_name">Name of the food</string>
    <string name="add_food_form_old_price">Old Price</string>
    <string name="add_food_form_new_price">New Price</string>
    <string name="add_food_form_quantity">Quantity</string>
    <string name="add_food_form_add_photo">Add photo</string>


    <string name="login_as_supplier">LOGIN AS SUPPLIER</string>
    <string name="login_to_your_account">LOGIN TO YOUR ACCOUNT</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">REGISTER</string>
    <string name="pizza2">PIZZA2</string>
    <string name="update_item">Update Item</string>
    <string name="price_1">Rs: 430</string>
    <string name="price_2">Rs: 500</string>
    <string name="discount_14_1">discount 14%</string>
    <string name="add_to_cart_1">Add to cart</string>
    <string name="price_3">Rs: 470</string>
    <string name="price_4">Rs: 520</string>
    <string name="discount_14">discount 11%</string>
    <string name="add_to_cart">Add to cart</string>


    <string name="Food_Item">Food Item</string>
    <string name="quantity">Quantity</string>
    <string name="restaurant">Restaurant</string>
    <string name="update">Update</string>


    <string name="delete">delete</string>

    <string name="customer_register_button_text">REGISTER AS CUSTOMER</string>
    <string name="login_as_customer">LOGIN AS CUSTOMER</string>
    <string name="login">Login</string>
    <string name="customer_registration_title">REGISTER AS CUSTOMER</string>
    <string name="log_out"><u>Log Out</u></string>
    <string name="proceed">Proceed</string>


    <string-array name="food">
        <item>Burger</item>
        <item>Rolls</item>
        <item>Egg Bun</item>

    </string-array>

    <string-array name="restaurent">
        <item>Burger shop</item>
        <item>Drink Ally</item>
        <item>Egg Bun</item>

    </string-array>


</resources>