<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="100dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/logo_part"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="45dp"
                android:text="QUICK"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/menu"
                android:layout_width="50dp"
                android:layout_height="76dp"
                android:layout_marginTop="25dp"

                app:srcCompat="@drawable/menu" />

            <ImageView
                android:id="@+id/shopping_cart"
                android:layout_width="50dp"
                android:layout_height="76dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="335dp"

                app:srcCompat="@drawable/shopping_cart" />

            <TextView
                android:id="@+id/logo_part1"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/logo_part1"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="45dp"
                android:textSize="24sp"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/logo_part2"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="199dp"
                android:layout_marginTop="50dp"
                android:text="@string/logo_part2"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="italic" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/main_scroll_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="110dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/form_logo_part_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:text="@string/register_page_logo_part1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/form_logo_part_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="55dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/register_page_logo_part2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/form_register_full_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/name_edit_view"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/name"
                android:hint="Enter Your Name.."
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/address"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/form_register_address"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/address_edit_view"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/address"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/textView"
                android:hint="Enter Your Address.."
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/email"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/form_register_email"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/email_edit_view"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/textView"
                android:hint="Enter Your Email.."
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/password"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/form_register_password"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/password_edit_view"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/textView"
                android:hint="Enter Your Password.."
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/form_register_re_enter_password"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/new_password_edit_view"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/new_password"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/textView"
                android:hint="Enter Your Password again.."
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/register"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/form_register_button">

            </Button>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/bottom_navigation"
                android:layout_width="400dp"


                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_alignParentBottom="true"

                    android:layout_gravity="bottom"
                    android:layout_marginBottom="-1dp"
                    app:backgroundTint="@color/design_default_color_background"
                    app:itemIconTint="@color/design_default_color_error"

                    >

                    <ImageView
                        android:id="@+id/home"
                        android:layout_width="50dp"
                        android:layout_height="73dp"


                        app:srcCompat="@drawable/home3" />

                    <ImageView
                        android:id="@+id/delivery"
                        android:layout_width="50dp"
                        android:layout_height="76dp"
                        android:layout_marginLeft="110dp"


                        app:srcCompat="@drawable/delivery" />

                    <ImageView
                        android:id="@+id/profile"
                        android:layout_width="50dp"
                        android:layout_height="73dp"
                        android:layout_marginLeft="225dp"

                        app:srcCompat="@drawable/profile" />

                    <ImageView
                        android:id="@+id/supplier"
                        android:layout_width="50dp"
                        android:layout_height="73dp"
                        android:layout_marginLeft="330dp"

                        app:srcCompat="@drawable/provider" />
                </com.google.android.material.bottomnavigation.BottomNavigationView>


            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>