<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="100dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/menu"
                android:layout_width="50dp"
                android:layout_height="76dp"
                android:layout_marginTop="25dp"

                app:srcCompat="@drawable/menu" />

            <ImageView
                android:id="@+id/shopping_cart"
                android:layout_width="50dp"
                android:layout_height="76dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="335dp"

                app:srcCompat="@drawable/shopping_cart" />

            <TextView
            android:id="@+id/logo_part1"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/logo_part1"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="45dp"
            android:textSize="24sp"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/logo_part2"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="199dp"
                android:layout_marginTop="50dp"
                android:text="@string/logo_part2"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="italic" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/button_main"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="300dp"

        android:background="#EF1111"
        android:text="@string/register_button_text"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="400dp"

        android:background="@drawable/border_bottom"
        android:text="@string/login_button_text"
        android:textColor="#040404"
        android:textSize="25sp" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"

            android:layout_gravity="bottom"
            android:layout_marginBottom="-1dp"
            app:backgroundTint="@color/design_default_color_background"
            app:itemIconTint="@color/design_default_color_error"

            >

            <ImageView
                android:id="@+id/home"
                android:layout_width="50dp"
                android:layout_height="73dp"


                app:srcCompat="@drawable/home3" />

            <ImageView
                android:id="@+id/delivery"
                android:layout_width="50dp"
                android:layout_height="76dp"
                android:layout_marginLeft="110dp"


                app:srcCompat="@drawable/delivery" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="50dp"
                android:layout_height="73dp"
                android:layout_marginLeft="225dp"

                app:srcCompat="@drawable/profile" />

            <ImageView
                android:id="@+id/supplier"
                android:layout_width="50dp"
                android:layout_height="73dp"
                android:layout_marginLeft="330dp"

                app:srcCompat="@drawable/provider" />
        </com.google.android.material.bottomnavigation.BottomNavigationView>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>